2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove unused autoconf test.
	* configure.in: Don't invoke CL_MSYNC.
	* m4/msync.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Drop support for old Mac OS Rhapsody.
	* lispbibl.d (UNIX_RHAPSODY, UNIX_DARWIN): Remove macros.
	Test UNIX_MACOSX instead of UNIX_DARWIN everywhere.
	* unix.d: Remove special code for UNIX_RHAPSODY.
	* spvw.d, stream.d, socket.d: Test UNIX_MACOSX instead of UNIX_DARWIN.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Modernize: Assume that caddr_t is a typedef equivalent to 'char *'.
	* m4/mmap.m4 (CL_MMAP): Use 'char*' instead of 'caddr_t'.
	* stream.d (clear_tty_input, finish_tty_output, clear_tty_output): Use
	'char*' instead of 'CADDR_T'.
	* configure.in: Don't invoke CL_CADDR_T.
	* m4/caddr_t.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove unused code in Autoconf macros.
	* m4/ioctl.m4 (CL_IOCTL): Don't define IOCTL_REQUEST_T, IOCTL_DOTS,
	IOCTL_ARGUMENT_T.
	* configure.in: Update comment.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Modernize: Assume ANSI C or C++ in Autoconf macros.
	* m4/as-underscore.m4: Use ANSI C prototypes.
	* m4/signal.m4: Likewise.
	* aclocal.m4, src/configure: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove workaround against ancient systems with old waitpid declaration.
	* unix.d (waitpid, wait2): Use pid_t instead of PID_T.
	* unixaux.d (wait2): Likewise.
	* configure.in: Don't invoke CL_WAITPID.
	* m4/waitpid.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Remove workaround against ancient systems with hidden ELOOP macro.
	* pathname.d (realpath, get_path_info): Use ELOOP, not ELOOP_VALUE.
	* configure.in: Don't invoke CL_ELOOP.