@@ -1,57 +1,0 @@
-dnl -*- Autoconf -*-
-dnl Copyright (C) 1993-2008, 2017 Free Software Foundation, Inc.
-dnl This file is free software, distributed under the terms of the GNU
-dnl General Public License.  As a special exception to the GNU General
-dnl Public License, this file may be distributed as part of a program
-dnl that contains a configuration script generated by Autoconf, under
-dnl the same distribution terms as the rest of that program.
-
-dnl From Bruno Haible, Marcus Daniels, Sam Steingold.
-
-AC_PREREQ([2.57])
-
-AC_DEFUN([CL_RLIMIT],
-[
-  AC_CHECK_FUNCS([getrlimit setrlimit])
-  if test $ac_cv_func_setrlimit = yes; then
-    AC_CHECK_SIZEOF([rlim_t],,[
-      #include <stdio.h>
-      #include <sys/resource.h>
-      ])
-
-    CL_PROTO([getrlimit],
-      [CL_PROTO_TRY([
-         #include <stdlib.h>
-         #ifdef HAVE_UNISTD_H
-          #include <unistd.h>
-         #endif
-         #include <sys/types.h>
-         #include <sys/time.h>
-         #include <sys/resource.h>
-         ],
-         [int getrlimit (int resource, struct rlimit * rlim);],
-         [cl_cv_proto_getrlimit_arg1="int"],
-         [cl_cv_proto_getrlimit_arg1="enum __rlimit_resource"])
-      ],
-      [extern int getrlimit ($cl_cv_proto_getrlimit_arg1, struct rlimit *);])
-    AC_DEFINE_UNQUOTED([RLIMIT_RESOURCE_T], [$cl_cv_proto_getrlimit_arg1],
-      [type of `resource' in setrlimit() declaration])
-
-    CL_PROTO([setrlimit],
-      [CL_PROTO_CONST([
-         #include <stdlib.h>
-         #ifdef HAVE_UNISTD_H
-          #include <unistd.h>
-         #endif
-         #include <sys/types.h>
-         #include <sys/time.h>
-         #include <sys/resource.h>
-         ],
-         [int setrlimit (RLIMIT_RESOURCE_T resource, struct rlimit * rlim);],
-         [cl_cv_proto_setrlimit_arg2])
-      ],
-      [extern int setrlimit ($cl_cv_proto_getrlimit_arg1, $cl_cv_proto_setrlimit_arg2 struct rlimit *);])
-    AC_DEFINE_UNQUOTED([SETRLIMIT_CONST], [$cl_cv_proto_setrlimit_arg2],
-      [declaration of setrlimit() needs const])
-  fi
-])
